Added all necessary fonts for project, and made custom classes for each

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -45,3 +45,43 @@ form:invalid button[type="submit"] {
 .bg-purple{
   background-color: #a76cbd;
 }
+
+.text-purple{
+  color: #6A50A1;
+}
+
+.beauty{
+  font-family: 'Gafata', sans-serif;
+}
+
+.gore{
+  font-family: 'Mate SC', serif;
+}
+
+.realism{
+  font-family: 'Jacques Francois', serif;
+}
+
+.prosthetics{
+  font-family: 'Gabriela', serif;
+}
+
+.jost{
+  font-family: 'Jost', sans-serif;
+}
+
+.headland-one{
+  font-family: 'Headland One', serif;
+}
+
+.montserrat{
+  font-family: 'Montserrat', sans-serif;
+}
+
+.karla{
+  font-family: 'Karla', sans-serif;
+}
+
+.playfair{
+  font-family: 'Playfair Display', serif;
+}
