added some film pngs, and the four home page imgs, and replace the placeholders with new ones

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -58,28 +58,28 @@ form:invalid button[type="submit"] {
 
 .beauty{
   font-family: 'Gafata', sans-serif;
-  background-image: url("https://placehold.co/300x700");
+  background-image: url("/beauty.jpg");
   background-position: center;
   background-size: cover;
 }
 
 .gore{
   font-family: 'Mate SC', serif;
-  background-image: url("https://placehold.co/300x700");
+  background-image: url("/gore.png");
   background-position: center;
   background-size: cover;
 }
 
 .realism{
   font-family: 'Jacques Francois', serif;
-  background-image: url("https://placehold.co/300x700");
+  background-image: url("/realistic.jpg");
   background-position: center;
   background-size: cover;
 }
 
 .prosthetics{
   font-family: 'Gabriela', serif;
-  background-image: url("https://placehold.co/300x700");
+  background-image: url("/prosthetics.png");
   background-position: center;
   background-size: cover;
 }
